Updated View Activity Log component, fixed Library menu being shifted 15px to the right, set the warning message for wrong layout to show on screens larger than 600px instead of 400px, and fixed all sets inside Exercise component not having a unique _id

--- a/src/components/common/Navigation/Navigation.module.css
+++ b/src/components/common/Navigation/Navigation.module.css
@@ -7,7 +7,7 @@ nav{
   left: 0px;
   display: grid;
   align-items: center;
-  padding: 0 15px;
+  padding: 0;
   background-color: #18191b;
   z-index: 50;
   grid-template-columns: 1fr 1fr 50px 1fr 1fr;
@@ -67,14 +67,14 @@ nav{
 .libraryMenu{
   position: fixed;
   bottom: 75px;
-  width: 100vw;
+  width: 100%;
   height: calc(100vh - 75px);
   display: flex;
   animation: slideUp 0.1s;
   z-index: 9999;
 }
 .libraryMenu .bg{
-  width: 100vw;
+  width: 100%;
   height: 100%;
   backdrop-filter: blur(20px);
   z-index: 9999;
