--- a/src/components/pages/Activity/LogsHistory/ActivityLog/ActivityLog.module.css
+++ b/src/components/pages/Activity/LogsHistory/ActivityLog/ActivityLog.module.css
@@ -1,24 +1,34 @@
 .activityLog{
     position: fixed;
-    bottom: 85px;
-    width: calc(100vw - 20px);
-    height: 400px;
+    left: 0;
+    bottom: 75px;
+    width: 100vw;
+    height: calc(100vh - 75px);
     overflow: hidden;
+    backdrop-filter: blur(25px);
+}
+.activityLog .content{
     display: grid;
+    width: calc(100% - 20px);
+    height: auto;
+    max-height: 90%;
     grid-template-rows: 40px 1fr 50px;
     background-color: var(--modal-bg);
     padding: 10px;
     border-radius: 10px;
     animation: slideUpLog 0.1s;
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    gap: 20px;
 }
-
 @keyframes slideUpLog {
     from{
-        bottom: 0;
+        bottom: -120%;
         opacity: 0;
     }
     to{
-        bottom: 85px;
+        bottom: 10px;
         opacity: 1;
     }
 }
@@ -52,34 +62,23 @@
     justify-self: center;
 }
 .activityLog .logContent{
-    display: grid;
-    grid-template-rows: 20px 30px 30px 30px 20px 1fr;
+    display: flex;
+    flex-direction: column;
     gap: 10px;
 }
 .tags,
 .targetMuscles,
 .equipments{
     width: 100%;
-    height: 30px !important;
-    display: grid;
-    grid-template-columns: 30px 1fr;
-    gap: 10px;
-    align-items: center;
-}
-.tags .tagsContainer,
-.targetMuscles .musclesContainer,
-.equipments, .equipmentContainer{
-    width: 100%;
-    height: 100%;
+    height: auto;
     display: flex;
+    flex-wrap: wrap;
     gap: 10px;
     align-items: center;
-    overflow-x: auto;
-    overflow-y: hidden;
 }
-.tags .tagsContainer .tag-body,
-.targetMuscles .musclesContainer .muscle,
-.equipments .equipmentContainer .equipmentBody{
+.tags .tag-body,
+.targetMuscles .muscle,
+.equipments .equipmentBody{
     height: 30px;
     padding: 0 10px;
     border-radius: 5px;
@@ -88,7 +87,7 @@
     background-color: var(--background);
     align-items: center;
 }
-.tags .tagsContainer .tag-body .tag-color{
+.tags .tag-body .tag-color{
     width: 10px;
     height: 10px;
     border-radius: 100%;
@@ -104,7 +103,8 @@
     flex-shrink: 0;
 }
 .values{
-    height: 100%;
+    height: auto;
+    min-height: 100px;
     display: flex;
     flex-direction: column;
     gap: 10px;
